Fixed spacing around the images and text in moons.html.

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,6 @@ h1 {
 }
 
 .nav {
-	padding: 0;
 	list-style: none;
 }
 
